@@ -2,6 +2,7 @@ This file documents the revision history for Perl extension Mojolicious.
 
 2.92  2012-04-27
   - Improved documentation.
+  - Improved tests.
 
 2.91  2012-04-26
   - Added cookies method to Mojo::Message.
